[package]
name = "twark"
version = "0.1.0"
authors = ["Mitsuru Takigahira <mysticdoll@mysticdoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = { version = "^0.9.1", features = ["ssl"] }
openssl = { version = "^0.10", features = [] }
regex = "^1.3.4"
lazy_static = "^1.4.0"
getset = "^0.1.0"
